--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 .shapka{
     background-color: rgb(198, 207, 207);
     display: flex;
-    width: 660px;
+    width: 100%;
     height: 50px;
     align-items: center;
     justify-content: center;
@@ -19,7 +19,7 @@
     position: relative;
     background-color: rgb(236, 236, 178);
     display: flex;
-    width: 460px;
+    width: 70%;
     height: 320px;
     justify-content: center;
     padding-top: 30px;
@@ -27,29 +27,29 @@
 .child1{
     position: absolute;
     display: flex;
-    width: 200px;
+    width: 45%;
     height: 50px;
     background-color: rgb(236, 223, 77);
     align-items: center;
     justify-content: space-around;
     top: 190px;
-    left: 10px;
+    left: 40px;
 }
 .child2{
     position: absolute;
     display: flex;
-    width: 200px;
+    width: 45%;
     height: 50px;
     background-color: rgb(236, 223, 77);
     align-items: center;
     justify-content: space-around;
     top: 190px;
-    right: 10px;
+    right: 40px;
 }
 .child3{
     position: absolute;
     display: flex;
-    width: 440px;
+    width: 92%;
     height: 70px;
     background-color: rgb(236, 223, 77);
     align-items: center;
@@ -60,17 +60,17 @@
     background-color: rgb(169, 237, 145);
     display: flex;
     height: 320px;
-    width: 200px;
+    width: 30%;
     justify-content: center;
     position: absolute;
     top: 58px;
-    right: 73px;
+    right: 0.55%;
     padding-top: 30px;
 }
 .futer{
     background-color: rgb(198, 207, 207);
     display: flex;
-    width: 660px;
+    width: 100%;
     height: 100px;
     align-items: center;
     justify-content: center;
@@ -78,46 +78,46 @@
 .futerchild1{
     position: absolute;
     display: flex;
-    width: 150px;
+    width: 330px;
     height: 70px;
     background-color: white;
     align-items: center;
     justify-content: space-around;
     top: 420px;
-    left: 20px;
+    left: 50px;
 }
 .futerchild2{
     position: absolute;
     display: flex;
-    width: 150px;
+    width: 330px;
     height: 70px;
     background-color: white;
     align-items: center;
     justify-content: space-around;
     top: 420px;
-    left: 183px;
+    left: 405px;
 }
 .futerchild3{
     position: absolute;
     display: flex;
-    width: 150px;
+    width: 330px;
     height: 70px;
     background-color: white;
     align-items: center;
     justify-content: space-around;
     top: 420px;
-    left: 344px;
+    left: 760px;
 }
 .futerchild4{
     position: absolute;
     display: flex;
-    width: 150px;
+    width: 330px;
     height: 70px;
     background-color: white;
     align-items: center;
     justify-content: space-around;
     top: 420px;
-    left: 505px;
+    left: 1115px;
 }
 body {
     font-weight: bold;
